# django-extra-checks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  devenv.nix  flake.nix  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  shell.nix  tox.ini
.github/workflows/: ci.yml  main.yml
src/extra_checks/: __init__.py  apps.py  ast.py  check_id.py  checks.py  controller.py  exceptions.py  forms.py  registry.py  utils.py
src/extra_checks/ast/: __init__.py  ast.py  cst.py  exceptions.py  lazy.py  protocols.py  source_provider.py
src/extra_checks/checks/: __init__.py  base_checks.py  drf_serializer_checks.py  model_checks.py  model_field_checks.py  self_checks.py
src/extra_checks/fixes/: fix_choices_constraint.py
src/extra_checks/management/commands/: extra_check.py
tests/: settings.py  test_autofix.py  test_config.py  test_controller.py  test_drf_serializer_checks.py  test_ignore.py  test_model_checks.py  test_model_field_checks.py  test_self_checks.py  test_utils.py  urls.py
tests/example/: admin.py  apps.py  models.py  serializers.py
