[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-extra-checks"
dynamic = ["version"]
description = "Collection of useful checks for Django Checks Framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Konstantin Alekseev", email = "mail@kalekseev.com" },
]
keywords = [
    "checks",
    "django",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "Django",
    "django-stubs",
    "djangorestframework",
    "djangorestframework-stubs",
    "mypy",
    "pdbpp",
    "pre-commit",
    "ruff",
    {include-group = "test"},
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-django",
]

[project.urls]
Homepage = "https://github.com/kalekseev/django-extra-checks"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.sdist]
include = ["/src"]
[tool.hatch.build.targets.wheel]
packages = ["src/extra_checks"]

[tool.ruff]
src = ["src"]
target-version = "py39"
[tool.ruff.lint]
select = [
  'B',
  'C',
  'E',
  'F',
  'N',
  'W',
  'UP',
  'RUF',
  'INP',
  'I',
  'TCH',
]
ignore = [
  'E501',
  'B904',
  'B905',
  'RUF012',
]
extend-safe-fixes = ["TCH"]

[tool.pytest.ini_options]
addopts = "-p no:doctest --cov=extra_checks --cov-branch --ds=tests.settings"
django_find_project = false
pythonpath = "."

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = true
strict_equality = true
warn_unreachable = true
show_error_codes = true

no_implicit_optional = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "tests.settings"
