[metadata]
name = django-extra-checks
version = 0.3.0
author = Konstantin Alekseev
author_email = mail@kalekseev.com
description = Collection of useful checks for Django Checks Framework
keywords = django, checks
url = https://github.com/kalekseev/django-extra-checks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-django
    pytest-cov
    Django
    djangorestframework
    django-stubs==1.5.0
    djangorestframework-stubs==1.2.0
    flake8>=3.8
    flake8-bugbear
    pre-commit
    isort>=5.0
    pdbpp
    tox

[flake8]
max-line-length = 110
ignore = E126,E127,E501,E731,W503

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_first_party = extra_checks
known_third_party = django,pytest,rest_framework,setuptools
