[metadata]
name = django-extra-checks
version = 0.14.0-dev
author = Konstantin Alekseev
author_email = mail@kalekseev.com
description = Collection of useful checks for Django Checks Framework
keywords = django, checks
url = https://github.com/kalekseev/django-extra-checks
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions ; python_version < "3.8"

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-django

dev =
    Django
    djangorestframework
    django-stubs
    djangorestframework-stubs
    mypy<0.990
    flake8
    flake8-bugbear
    pre-commit
    isort
    pdbpp
    black

[flake8]
max-line-length = 110
ignore = E126,E127,E501,E731,W503

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_first_party = extra_checks
known_third_party = django,pytest,rest_framework,setuptools
